--- a/lab01b/index.html
+++ b/lab01b/index.html
@@ -30,15 +30,28 @@
     </script>
     <script>
         var c2 = document.getElementById("cns2");
-
+        var current = 255;
+        var direction = 0
+        //g, 0, 255-g
         function draw2() {
             ctx = c2.getContext("2d");
             ctx.clearRect(0, 0, c2.width, c2.height);
             ctx.beginPath();
             ctx.arc(100, 75, 50, 0, 2 * Math.PI);
-            //ctx.fillStyle = color;
+            ctx.fillStyle = `rgb(0, ${current}, ${255 - current})`;
             ctx.fill();
             ctx.stroke();
+            if(current == 0 && direction == 0)
+                direction = 1;
+            
+            if(current == 255 && direction == 1)
+                direction = 0;
+
+            if(direction == 1)
+                current += 1;
+            else
+                current -= 1;
+            
             window.requestAnimationFrame(draw2);
         }
         draw2();
