--- a/lab4/index.html
+++ b/lab4/index.html
@@ -18,6 +18,25 @@
                 ctx.fill();
             }
 
+            drawWheel(x, y) {
+                ctx.beginPath();
+                ctx.arc(x, y, 10, 0, 2 * Math.PI);
+                ctx.fillStyle = `rgb(0, 0, 0)`;
+                ctx.fill();
+            }
+
+            drawWheels() {
+                //this.drawWheel(this.x, this.y + this.height);
+                this.drawWheel(this.x, this.y + 20);
+                this.drawWheel(this.x + this.width, this.y + 20);
+                this.drawWheel(this.x, this.y + this.height - 20);
+                this.drawWheel(this.x + this.width, this.y + this.height - 20);
+            }
+
+            draw() {
+                this.drawCar();
+                this.drawWheels();
+            }
         }
 
         canvas = document.getElementById("cns");
@@ -25,7 +44,7 @@
 
         var player = new Player(canvas.width / 2, canvas.height - 150, 50, 100);
 
-        player.drawCar();
+        player.draw();
     </script>
 </body>
 
