--- a/lab6_1/index.html
+++ b/lab6_1/index.html
@@ -72,8 +72,6 @@
                 ctx.beginPath();
                 ctx.rect(this.x, this.y, this.width, this.height);
                 ctx.rect(this.x + this.spacing - this.width, this.y, this.width, this.height);
-                console.log(this.fillStyle)
-                //console.log(this.fillStyle);
                 if(this.fillStyle == 1) {
                     ctx.fillStyle = `rgb(255, 255, 255)`;
                 } else {
@@ -203,7 +201,7 @@
             const keyCode = event.keyCode;
             if ((keyCode == 65 || keyCode == 37) && player.x - 5 >= route.x)
                 player.x -= 5;
-            if ((keyCode == 68 || keyCode == 39) && player.x + player.width + 5 <= route.width)
+            if ((keyCode == 68 || keyCode == 39) && player.x + player.width + 5 <= route.x + route.width)
                 player.x += 5;
             // if (keyCode == 32)
             //     spawnBullet();
